--- a/app/templates/detalles/detalle_base.html
+++ b/app/templates/detalles/detalle_base.html
@@ -28,7 +28,7 @@
             <img id="product-image" 
             src="https://www.photos-public-domain.com/wp-content/uploads/2010/12/apples-red.jpg" 
             alt="Manzana"
-            width="640" height="480"
+            style="width:640px; height:480px" 
             onclick="cambiarTamañoImagen()">
         </div>
         <script src="{{ url_for('static', filename='js/details.js') }}"></script>
