--- a/app/templates/form/agregar_producto.html
+++ b/app/templates/form/agregar_producto.html
@@ -5,7 +5,7 @@
 
             {% block foto %}
             <label for="foto_producto" class="label">Foto del producto:</label>
-            <input type="file" id="foto_producto" name="foto_producto" class="input-field">
+            <input type="file" id="foto_producto" multiple="multiple" name="foto_producto" class="input-field">
             <br><br>
             {% endblock %}
             {% block contacto %}
